# safe-cli

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.MD  README.md  commands.txt  contract_cli.py  contract_completer.py  contract_constants.py  contract_lexer.py  contract_operator.py  contract_reader.py  docker-compose.yml  ether_helper.py  ethereum_hd_wallet.py  gnosis_cli.ini  gnosis_cli.py  gnosis_launcher.py  justfile  log_formatter.py  main.py  prompt_parser.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.sh  safe_cli.py  safe_completer.py  safe_completer_constants.py  safe_creator.py  safe_init_scenario_script.py  safe_lexer.py  safe_operator.py  scenario_script.py  (+6 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
code_references/: contract_interaction_test.py  etherchain.py  etherchain_test.py  etherscan.py  test_safe_console.py
code_references (deprecated)/: config_parser_test.py  contract_interaction_test.py  default_truffle_commands.py  etherchain_provider_test.py  etherscan_provider_test.py  gnosis_safe_contract_v1_1_0.ini  gnosis_safe_setup.py
core/: console_accounts.py  console_controller.py  console_data.py  console_engine.py  console_input_getter.py  console_input_validation.py  console_session_accounts.py  console_truffle_interface.py  contract_console_input_getter.py  contract_console_input_validation.py  gnosis_manager.py
safe_cli/: argparse_validators.py  ethereum_hd_wallet.py  main.py  prompt_parser.py  safe_addresses.py  safe_completer.py  safe_completer_constants.py  safe_creator.py  safe_lexer.py  safe_operator.py  safe_relay_operator.py  safe_tx_service_operator.py  utils.py
test/: test_console_getter.py  test_console_input.py  test_gnosis_console_input.py  test_network_agent.py  test_safe_commands.py  test_safe_console.py
tests/: safe_cli_test_case_mixin.py  test_argparse_validators.py  test_entrypoint.py  test_ethereum_hd_wallet.py  test_hw_account_manager.py  test_hw_wallet_manager.py  test_ledger_manager.py  test_ledger_wallet.py  test_safe_addresses.py  test_safe_cli.py  test_safe_cli_entry_point.py  test_safe_completer.py  test_safe_creator.py  test_safe_lexer.py  test_safe_operator.py  test_safe_runner.py  test_safe_tx_service_operator.py  test_trezor_manager.py  test_trezor_wallet.py  test_tx_builder_file_decoder.py  test_typer_validators.py  test_utils.py  utils.py
(+222 files in other folders)
